# fm_synth

./: .gitignore  Cargo.toml  README.md  bundler.toml
src/: clock.rs  consts.rs  editor.rs  fm_core.rs  fm_operator.rs  fm_voice.rs  lib.rs  linear_eg.rs  sin_osc.rs  sin_voice.rs  voice.rs  voice_group.rs  voice_utils.rs
